feat/Osmosis Chain - clean merge
