# src/amm/amm.controllers.ts
@@ -81,11 +81,17 @@ import { Algorand } from '../chains/algorand/algorand';
 import { Tinyman } from '../connectors/tinyman/tinyman';
 import { Plenty } from '../connectors/plenty/plenty';
 import { QuipuSwap } from '../connectors/quipuswap/quipuswap';
+import { Osmosis } from '../chains/osmosis/osmosis';
+import { AMOUNT_NOT_SUPPORTED_ERROR_CODE, ENDPOINT_NOT_SUPPORTED_ERROR_MESSAGE, HttpException } from '../services/error-handler';
 
 export async function price(req: PriceRequest): Promise<PriceResponse> {
   const chain = await getInitializedChain<
-    Algorand | Ethereumish | Nearish | Tezosish
+    Algorand | Ethereumish | Nearish | Tezosish | Osmosis
   >(req.chain, req.network);
+  if (chain instanceof Osmosis){
+    return chain.controller.price(chain as unknown as Osmosis, req);
+  }
+
   const connector: Uniswapish | RefAMMish | Tinyman | Plenty | QuipuSwap =
     await getConnector<Uniswapish | RefAMMish | Tinyman | Plenty | QuipuSwap>(
       req.chain,
@@ -109,8 +115,12 @@ export async function price(req: PriceRequest): Promise<PriceResponse> {
 
 export async function trade(req: TradeRequest): Promise<TradeResponse> {
   const chain = await getInitializedChain<
-    Algorand | Ethereumish | Nearish | Tezosish
+    Algorand | Ethereumish | Nearish | Tezosish | Osmosis
   >(req.chain, req.network);
+  if (chain instanceof Osmosis){
+    return chain.controller.trade(chain as unknown as Osmosis, req);
+  }
+
   const connector: Uniswapish | RefAMMish | Tinyman | Plenty | QuipuSwap =
     await getConnector<Uniswapish | RefAMMish | Tinyman | Plenty | QuipuSwap>(
       req.chain,
@@ -135,7 +145,10 @@ export async function trade(req: TradeRequest): Promise<TradeResponse> {
 export async function addLiquidity(
   req: AddLiquidityRequest
 ): Promise<AddLiquidityResponse> {
-  const chain = await getInitializedChain<Ethereumish>(req.chain, req.network);
+  const chain = await getInitializedChain<Ethereumish | Osmosis>(req.chain, req.network);
+  if (chain instanceof Osmosis){
+    return chain.controller.addLiquidity(chain as unknown as Osmosis, req);
+  }
   const connector: UniswapLPish = await getConnector<UniswapLPish>(
     req.chain,
     req.network,
@@ -148,7 +161,10 @@ export async function addLiquidity(
 export async function reduceLiquidity(
   req: RemoveLiquidityRequest
 ): Promise<RemoveLiquidityResponse> {
-  const chain = await getInitializedChain<Ethereumish>(req.chain, req.network);
+  const chain = await getInitializedChain<Ethereumish | Osmosis>(req.chain, req.network);
+  if (chain instanceof Osmosis){
+    return chain.controller.removeLiquidity(chain as unknown as Osmosis, req);
+  }
   const connector: UniswapLPish = await getConnector<UniswapLPish>(
     req.chain,
     req.network,
@@ -161,7 +177,14 @@ export async function reduceLiquidity(
 export async function collectFees(
   req: CollectEarnedFeesRequest
 ): Promise<RemoveLiquidityResponse> {
-  const chain = await getInitializedChain<Ethereumish>(req.chain, req.network);
+  const chain = await getInitializedChain<Ethereumish | Osmosis>(req.chain, req.network);
+  if (chain instanceof Osmosis){
+    throw new HttpException(
+      500,
+      ENDPOINT_NOT_SUPPORTED_ERROR_MESSAGE,
+      AMOUNT_NOT_SUPPORTED_ERROR_CODE
+    );
+  }
   const connector: UniswapLPish = await getConnector<UniswapLPish>(
     req.chain,
     req.network,
@@ -173,7 +196,10 @@ export async function collectFees(
 export async function positionInfo(
   req: PositionRequest
 ): Promise<PositionResponse> {
-  const chain = await getInitializedChain<Ethereumish>(req.chain, req.network);
+  const chain = await getInitializedChain<Ethereumish | Osmosis>(req.chain, req.network);
+  if (chain instanceof Osmosis){
+    return chain.controller.poolPositions(chain as unknown as Osmosis, req);
+  }
   const connector: UniswapLPish = await getConnector<UniswapLPish>(
     req.chain,
     req.network,
@@ -185,7 +211,10 @@ export async function positionInfo(
 export async function poolPrice(
   req: PoolPriceRequest
 ): Promise<PoolPriceResponse> {
-  const chain = await getInitializedChain<Ethereumish>(req.chain, req.network);
+  const chain = await getInitializedChain<Ethereumish | Osmosis>(req.chain, req.network);
+  if (chain instanceof Osmosis){
+    return chain.controller.poolPrice(chain as unknown as Osmosis, req);
+  }
   const connector: UniswapLPish = await getConnector<UniswapLPish>(
     req.chain,
     req.network,
@@ -198,8 +227,12 @@ export async function estimateGas(
   req: NetworkSelectionRequest
 ): Promise<EstimateGasResponse> {
   const chain = await getInitializedChain<
-    Algorand | Ethereumish | Nearish | Tezosish
+    Algorand | Ethereumish | Nearish | Tezosish | Osmosis
   >(req.chain, req.network);
+  if (chain instanceof Osmosis){
+    return chain.controller.estimateGas(chain as unknown as Osmosis);
+  }
+  
   const connector: Uniswapish | RefAMMish | Tinyman | Plenty | QuipuSwap =
     await getConnector<Uniswapish | RefAMMish | Plenty | QuipuSwap>(
       req.chain,
