# src/amm/amm.requests.ts
@@ -1,3 +1,4 @@
+import { CoinAndSymbol, SerializableExtendedPool as CosmosSerializableExtendedPool } from '../chains/osmosis/osmosis.types';
 import { PerpPosition } from '../connectors/perp/perp';
 import {
   NetworkSelectionRequest,
@@ -29,24 +30,27 @@ export interface PriceResponse {
   gasPrice: number;
   gasPriceToken: string;
   gasLimit: number;
-  gasCost: string;
+  gasCost: string; // also gasUsed for Cosmos prices
+  gasWanted?: string;
 }
 
 export interface PoolPriceRequest extends NetworkSelectionRequest {
   token0: string;
   token1: string;
-  fee: string;
-  period: number;
-  interval: number;
+  address?: string
+  fee?: string;
+  period?: number;
+  interval?: number;
 }
 
 export interface PoolPriceResponse {
   token0: string;
   token1: string;
-  fee: string;
-  period: number;
-  interval: number;
-  prices: string[];
+  fee?: string;
+  period?: number;
+  interval?: number;
+  prices?: string[];
+  pools?: CosmosSerializableExtendedPool[];
   network: string;
   timestamp: number;
   latency: number;
@@ -71,32 +75,38 @@ export interface TradeResponse {
   latency: number;
   base: string;
   quote: string;
-  amount: string;
+  amount: string; // traderequest.amount
+  finalAmountReceived?: string; // Cosmos
   rawAmount: string;
+  finalAmountReceived_basetoken?: string; // Cosmos
   expectedIn?: string;
-  expectedOut?: string;
-  price: string;
+  expectedOut?: string;  // Cosmos: expectedAmountReceived
+  expectedPrice?: string;  // Cosmos
+  price: string; // Cosmos: finalPrice
   gasPrice: number;
   gasPriceToken: string;
   gasLimit: number;
-  gasCost: string;
+  gasWanted?: string; // Cosmos
+  gasCost: string; // Cosmos: gasUsed
   nonce?: number;
   txHash: string | any | undefined;
 }
 
-export interface AddLiquidityRequest extends NetworkSelectionRequest {
+export interface AddLiquidityRequest extends NetworkSelectionRequest { // now also cosmos add swap position OR cosmos add LP position
   address: string;
   token0: string;
   token1: string;
   amount0: string;
   amount1: string;
-  fee: string;
-  lowerPrice: string; // integer as string
-  upperPrice: string; // integer as string
+  fee?: string;
+  lowerPrice?: string; // integer as string  // COSMOS - using this != undefined then call addpositionLP(), else: addposition() 
+  upperPrice?: string; // integer as string
   tokenId?: number;
   nonce?: number;
   maxFeePerGas?: string;
   maxPriorityFeePerGas?: string;
+  poolId?: string; // COSMOS: will select one for you if not provided
+  allowedSlippage?: string; // COSMOS: used to calc TokenMinAmount
 }
 
 export interface AddLiquidityResponse {
@@ -106,18 +116,24 @@ export interface AddLiquidityResponse {
   token0: string;
   token1: string;
   fee: string;
-  tokenId: number;
-  gasPrice: number;
+  tokenId?: number;
+  poolId?: string; // COSMOS
+  gasPrice: number | string; // COSMOS: string
   gasPriceToken: string;
   gasLimit: number;
-  gasCost: string;
+  gasCost: string; // gasUsed for Cosmos
+  gasWanted?: string;
   nonce: number;
   txHash: string | undefined;
+  poolAddress?: string; // Cosmos only
+  poolShares?: string; // Cosmos only
+  token0FinalAmount?: string; // Cosmos only
+  token1FinalAmount?: string; // Cosmos only
 }
 
 export interface CollectEarnedFeesRequest extends NetworkSelectionRequest {
   address: string;
-  tokenId: number;
+  tokenId?: number;
   nonce?: number;
   maxFeePerGas?: string;
   maxPriorityFeePerGas?: string;
@@ -125,26 +141,34 @@ export interface CollectEarnedFeesRequest extends NetworkSelectionRequest {
 
 export interface RemoveLiquidityRequest extends CollectEarnedFeesRequest {
   decreasePercent?: number;
+  poolId?: string; // Cosmos: required
+  allowedSlippage?: string;
 }
 
 export interface RemoveLiquidityResponse {
   network: string;
   timestamp: number;
   latency: number;
-  tokenId: number;
-  gasPrice: number;
+  tokenId?: number;
+  gasPrice: number | string; // COSMOS: string
   gasPriceToken: string;
-  gasLimit: number;
-  gasCost: string;
-  nonce: number;
+  gasLimit: number | string;
+  gasCost: string; // gasUsed for Cosmos
+  nonce?: number;
   txHash: string | undefined;
+  gasWanted?: string;
+  balances?: CoinAndSymbol[];
+  poolId?: string; // Cosmos
 }
 
 export interface PositionRequest extends NetworkSelectionRequest {
-  tokenId: number;
+  tokenId?: number;
+  address?: string;
+  poolId?: string;
 }
 
 export interface PositionResponse extends LPPositionInfo {
+  pools?: CosmosSerializableExtendedPool[];
   network: string;
   timestamp: number;
   latency: number;
